# gradido_blockchain

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.lib  CMakePresets.json  CMakeUserPresets.json  Dockerfile  Doxyfile  README.md  _abstract_8h_source.html  _abstract_provider_8h_source.html  _access_expire_cache_8h_source.html  _authenticated_encryption_8h_source.html  _block_8h_source.html  _block_key_8h_source.html  _block_stack_8h_source.html  _community_root_role_8h_source.html  _config_8h_source.html  _cross_group_transaction_builder_8cpp.html  _cross_group_transaction_builder_8cpp__incl.map  _cross_group_transaction_builder_8cpp__incl.md5  _cross_group_transaction_builder_8h.html  _cross_group_transaction_builder_8h__dep__incl.map  _cross_group_transaction_builder_8h__dep__incl.md5  _cross_group_transaction_builder_8h__incl.map  _cross_group_transaction_builder_8h__incl.md5  _cross_group_transaction_builder_8h_source.html  _crypto_config_8cpp.html  _crypto_config_8cpp__incl.map  _crypto_config_8cpp__incl.md5  _crypto_config_8h.html  _crypto_config_8h__dep__incl.map  _crypto_config_8h__dep__incl.md5  _crypto_config_8h__incl.map  _crypto_config_8h__incl.md5  _crypto_config_8h_source.html  _d_r_hash_8h.html  _d_r_hash_8h_a18b2aa427c4fb3fe13e5f2022854de41_cgraph.map  _d_r_hash_8h_a18b2aa427c4fb3fe13e5f2022854de41_cgraph.md5  (+2702 more)
.github/workflows/: generateDoxygenUMLPictures.yml  main.yml  test.yml
Dockerfiles/: Dockerfile.dependencies
cmake/: CMakeBundleStaticLibs.cmake  CMakeDetermineRustCompiler.cmake  FindMPFR.cmake
doc/: doxygen_tags.tag
include/crypto/: CryptoConfig.h  KeyPairEd25519.h  SecretKeyCryptography.h  mnemonic.h
include/gradido_blockchain/: AppContext.h  Application.h  CommunityContext.h  GradidoBlockchainException.h  GradidoTransactionBuilder.h  GradidoUnit.h  MemoryManager.h  ServerApplication.h  TransactionBodyBuilder.h  const.h  types.h  version.h.in
include/http/: JsonRequestHandler.h
include/model/: TransactionFactory.h
iota_rust_clib/: Cargo.toml
iota_rust_clib/src/: lib.rs
packaging/: CMakeLists.txt  GradidoBlockchainConfig.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+41 more)
src/: AppContext.cpp  Application.cpp  CommunitContext.cpp  GradidoBlockchainException.cpp  GradidoTransactionBuilder.cpp  GradidoUnit.cpp  MemoryManager.cpp  ServerApplication.cpp  TransactionBodyBuilder.cpp  const.cpp
src/blockchain/: Abstract.cpp  AbstractProvider.cpp  AddressIndex.cpp  Exceptions.cpp  Filter.cpp  InMemory.cpp  InMemoryProvider.cpp  TransactionEntry.cpp  TransactionsIndex.cpp
src/cpp/: GradidoBlockchainException.cpp  GradidoBlockchainException.h
src/crypto/: AuthenticatedEncryption.cpp  CryptoConfig.cpp  KeyPairEd25519.cpp  KeyPairEd25519Ex.cpp  Passphrase.cpp  SealedBoxes.cpp  SecretKeyCryptography.cpp  SignatureOctet.cpp  keyDerivation.cpp  mnemonic.cpp
src/data/: AccountBalance.cpp  CommunityRoot.cpp  ConfirmedTransaction.cpp  DurationSeconds.cpp  EncryptedMemo.cpp  GradidoTransaction.cpp  GradidoTransfer.cpp  LedgerAnchor.cpp  Protocol.cpp  PublicKey.cpp  RegisterAddress.cpp  Signature.cpp  SignatureMap.cpp  SignaturePair.cpp  Timestamp.cpp  TimestampSeconds.cpp  TransactionBody.cpp  TransferAmount.cpp
src/http/: GraphQLRequest.cpp  HttpRequest.cpp  IotaRequest.cpp  IotaRequestExceptions.cpp  JsonCakePHPRequest.cpp  JsonRPCRequest.cpp  JsonRequest.cpp  JsonRequestHandler.cpp  JsonRequestHandlerJwt.cpp  RequestExceptions.cpp  Server.cpp  ServerConfig.cpp
src/lib/: Config.cpp  DRHashList.cpp  DRVirtualFile.cpp  DataTypeConverter.cpp  Decay.cpp  DecayDecimal.cpp  Decimal.cpp  Dictionary.cpp  DictionaryExceptions.cpp  MapEnvironmentToConfig.cpp  MultithreadContainer.cpp  Profiler.cpp  RapidjsonHelper.cpp  minizLib.cpp
src/memory/: Block.cpp  BlockKey.cpp  BlockStack.cpp  (+3 more)
test/: CMakeLists.txt  GradidoTransactionBuilderTest.cpp  GradidoUnitTest.cpp  KeyPairs.cpp  KeyPairs.h  MemoryBlockTest.cpp  PreviousNMonthTest.cpp  TransactionBodyBuilderTest.cpp  bip0039_sorted_order  gradido_book_german_random_order_fixed_cases  https.cpp  main.cpp  main.h  serializedTransactions.h
test/blockchain/: EmptyInMemoryTest.cpp  EmptyInMemoryTest.h  InMemoryCrossGroupTest.h  InMemoryFindAllTest.cpp  InMemoryFindAllTest.h  InMemoryTest.cpp  InMemoryTest.h  RangeUtilTest.cpp
test/crypto/: TestAuthenticatedEncryption.cpp  TestEd25519BIP32.cpp  TestEd25519BIP32.h  TestPassphrase.cpp  TestPassphrase.h
test/data/: MessageIdTest.cpp  Timestamp.cpp
test/data/hiero/: AccountIdTest.cpp  TransactionIdTest.cpp
test/interaction/: DeserializeTest.cpp  SerializeTest.cpp  ToJsonTest.cpp  TransferAmountConstructorTest.cpp  ValidateCommunityRootTest.cpp  ValidateConfirmedTransactionTest.cpp  ValidateGradidoCreationTest.cpp  ValidateGradidoDeferredTransferTest.cpp  ValidateGradidoTransaction.cpp  ValidateGradidoTransferTest.cpp  ValidateRegisterAddressTest.cpp  ValidateTest.cpp  ValidateTransactionBody.cpp  const.h
test/lib/: AccessExpireCacheTest.cpp  DataTypeConverter.cpp  DataTypeConverterTest.cpp  DecayTest.cpp  DecayTest.h  DecimalTest.cpp  DecimalTest.h  ExpireCacheTest.cpp  TimepointIntervallTest.cpp  minizTest.cpp
test/model/: VectorCacheAllocatorTest.cpp  protopuf.cpp  protopuf.h
test/model/protopuf/: CommunityRoot.cpp
test/protocol/: TransactionBodyTest.cpp
test/serialization/: toJson.cpp  toJsonTest.cpp
test/v3_3/: GradidoTransactionBuilderTest.cpp  TransactionBodyBuilderTest.cpp  TransactionBodyBuilderTest.h
test/v3_3/interaction/: DeserializeTest.cpp  SerializeTest.cpp  const.h
tests/data/: CMakeLists.txt  LoadFromBinary.cpp  LoadFromBinary.h  main.cpp  main.h
(+669 files in other folders)
